# jsaw-core

./: Cargo.toml  MIGRATION_PLAN.md  MIGRATION_STATUS.md  README.md  js.sh  package-lock.json  package.json  tsconfig.json
crates/portal-jsc-common/: Cargo.toml
crates/portal-jsc-common/src/: lib.rs  natives.rs  semantic.rs  syntax.rs
crates/portal-jsc-generator/: Cargo.toml
crates/portal-jsc-generator/src/: main.rs
crates/simpl-js/: Cargo.toml
crates/simpl-js/src/: lib.rs
crates/swc-cfg/: Cargo.toml
crates/swc-cfg/src/: error.rs  lib.rs  module.rs  recfg.rs  simplify.rs  to_cfg.rs
crates/swc-ll-common/: Cargo.toml
crates/swc-ll-common/src/: ext.rs  fetch.rs  lib.rs
crates/swc-ll-common/src/ext/: consts.rs
crates/swc-opt-ssa/: Cargo.toml
crates/swc-opt-ssa/src/: error.rs  impls.rs  into.rs  lib.rs
crates/swc-ssa/: Cargo.toml
crates/swc-ssa/src/: clean.rs  consts.rs  conv.rs  error.rs  eval.rs  idw.rs  impls.rs  lib.rs  module.rs  opt_stub.rs  rew.rs  simplify.rs
crates/swc-tac/: Cargo.toml
crates/swc-tac/src/: consts.rs  conv.rs  error.rs  impls.rs  lam.rs  lib.rs  module.rs  prepa.rs  rew.rs  simpl.rs  simpl_legacy.rs  splat.rs
crates/swc-tac/src/conv/: live.rs  main.rs
crates/swc-tac/src/simpl_legacy/: convert.rs  impls.rs  reloop.rs
crates/swc-util/: Cargo.toml
crates/swc-util/src/: lib.rs  type.rs
portal-jsc-common/: Cargo.toml
portal-jsc-common/src/: lib.rs
swc-cfg/: Cargo.toml
swc-cfg/src/: lib.rs  recfg.rs  simplify.rs
swc-opt-ssa/: Cargo.toml
swc-opt-ssa/src/: impls.rs  into.rs  lib.rs
swc-ssa/: Cargo.toml
swc-ssa/src/: ch.rs  consts.rs  idw.rs  impls.rs  lib.rs  rew.rs  simplify.rs
swc-tac/: Cargo.toml
swc-tac/src/: lam.rs  lib.rs  prepa.rs  rew.rs  simpl.rs
swc-util/: Cargo.toml
swc-util/src/: brighten.rs  lib.rs  type.rs
