[workspace]
members=[  "portal-jsc-common","swc-cfg",  "swc-opt-ssa", "swc-ssa", "swc-tac", "swc-util"]

# "js-runtime-lib","swc-emit-rust","swc-waffle"

resolver="2"

[workspace.dependencies]
anyhow = "^1.0.87"
bimap = "^0.6.3"
id-arena = "^2.2.1"
arena-traits = {version="^0.2.1",features=["id-arena"]}
ssa-traits = "^0.2.1"
cfg-traits = "^0.2.1"
ssa-impls = "^0.2.1"
ssa-reloop = "^0.2.1"


proc-macro2 = "^1.0.88"
quasiquote = "^0.1.1"
quote = "^1.0.37"
syn = "^2.0.82"

typenum = "^1.18.0"
bitflags = "^2.8.0"
relooper = "^0.1.0"
cityhasher = "^0.1.0"

portal-pc-waffle="^0.5.4"
px-llvm-codegen-utils-core="^0.1.4"
px-llvm-codegen-utils-info="^0.1.4"
portal-pc-asm-common = "^0.1.0"
portal-solutions-swibb="^0.2.6"
bitvec = "^1.0.1"
instability = "^0.3.7"
linearize = "^0.1.4"
linearize-derive = "^0.1.0"

swc_atoms = "^6.0.0"
swc_common = "^13.0.0"
swc_ecma_ast = "^13.0.0"
swc_ecma_compat_es2015 = "^19.0.0"
swc_ecma_minifier = "^23.0.0"
swc_ecma_transforms_base = "^18.0.0"
swc_ecma_transforms_optimization = "^19.0.0"
swc_ecma_utils = "^18.0.0"
swc_ecma_visit = "^13.0.0"
swc_bundler = "^22.0.0"
swc_ecma_loader = "^13.0.0"
swc_ecma_parser = "^17.0.0"
swc_ecma_codegen = "^15"
swc_ecma_quote = "^17"
