[workspace]
members=[  "portal-jsc-common","swc-cfg",  "swc-opt-ssa", "swc-ssa", "swc-tac", "swc-util"]

# "js-runtime-lib","swc-emit-rust","swc-waffle"

resolver="3"

[workspace.package]
version = "0.8.0-pre.8"

[workspace.dependencies]
swc-cfg =             { version = "^0.8.0-pre.8", path = "swc-cfg", package = "portal-jsc-swc-cfg" }
swc-tac =             { version = "^0.8.0-pre.8", path = "swc-tac", package = "portal-jsc-swc-tac" }
swc-ssa =             { version = "^0.8.0-pre.8", path = "swc-ssa", package = "portal-jsc-swc-ssa" }
portal-jsc-swc-util = { version = "^0.8.0-pre.8", path = "swc-util", features = ["ty"] }
portal-jsc-common =   { version = "^0.8.0-pre.8", path = "portal-jsc-common" }


anyhow = "^1.0.87"
bimap = "^0.6.3"
id-arena = "^2.2.1"
arena-traits = {version="^0.2.3",features=["id-arena"]}
ssa-traits = "^0.2.3"
cfg-traits = "^0.2.3"
ssa-impls =  "^0.2.3"
ssa-reloop = "^0.2.3"

ssa-traits-03 ={version="0.3.0-alpha.2",package="ssa-traits"}
cfg-traits-03 ={version="0.3.0-alpha.2",package="cfg-traits"}
ssa-impls-03 = {version="0.3.0-alpha.2",package="ssa-impls"} 
ssa-reloop-03 ={version="0.3.0-alpha.2",package="ssa-reloop"}



proc-macro2 = "^1.0.88"
quasiquote = "^0.1.1"
quote = "^1.0.37"
syn = "^2.0.82"

typenum = "^1.18.0"
bitflags = "^2.8.0"
relooper = "^0.1.0"
cityhasher = "^0.1.0"

portal-pc-waffle="^0.5.4"
px-llvm-codegen-utils-core="^0.1.4"
px-llvm-codegen-utils-info="^0.1.4"
portal-pc-asm-common = "^0.1.0"
bitvec = "^1.0.1"
instability = "^0.3.7"
linearize = "^0.1.4"
linearize-derive = "^0.1.0"

swc_atoms = "^7.0.0"
swc_common = "^14.0.0"
swc_ecma_ast = "^14.0.0"
swc_ecma_compat_es2015 = "^24.0.0"
swc_ecma_minifier = "^28.0.0"
swc_ecma_transforms_base = "^23.0.0"
swc_ecma_transforms_optimization = "^24.0.0"
swc_ecma_utils = "^19.0.0"
swc_ecma_visit = "^14.0.0"
swc_bundler = "^27.0.0"
swc_ecma_loader = "^14.0.0"
swc_ecma_parser = "^22.0.0"
swc_ecma_codegen = "^16"


portal-solutions-swibb="^0.3.1"

