[workspace]
members = [
    "crates/portal-jsc-common",
    "crates/swc-cfg",
    "crates/swc-opt-ssa",
    "crates/swc-ssa",
    "crates/swc-tac",
    "crates/swc-util",
]

# "js-runtime-lib","swc-emit-rust","swc-waffle"

resolver = "3"

[workspace.package]
version = "0.8.0-pre.9"

[workspace.dependencies]
swc-cfg = { version = "^0.8.0-pre.9", path = "crates/swc-cfg", package = "portal-jsc-swc-cfg" }
swc-tac = { version = "^0.8.0-pre.9", path = "crates/swc-tac", package = "portal-jsc-swc-tac" }
swc-ssa = { version = "^0.8.0-pre.9", path = "crates/swc-ssa", package = "portal-jsc-swc-ssa" }
portal-jsc-swc-util = { version = "^0.8.0-pre.9", path = "crates/swc-util", features = [
    "ty",
] }
portal-jsc-common = { version = "^0.8.0-pre.9", path = "crates/portal-jsc-common" }


anyhow = "^1.0.87"
bimap = "^0.6.3"
id-arena = "^2.2.1"
arena-traits = { version = "^0.2.3", features = ["id-arena"] }
ssa-traits = "^0.2.3"
cfg-traits = "^0.2.3"
ssa-impls = "^0.2.3"
ssa-reloop = "^0.2.3"

ssa-traits-03 = { version = "0.3.0-alpha.2", package = "ssa-traits" }
cfg-traits-03 = { version = "0.3.0-alpha.2", package = "cfg-traits" }
ssa-impls-03 = { version = "0.3.0-alpha.2", package = "ssa-impls" }
ssa-reloop-03 = { version = "0.3.0-alpha.2", package = "ssa-reloop" }


proc-macro2 = "^1.0.88"
quasiquote = "^0.1.1"
quote = "^1.0.37"
syn = "^2.0.82"

typenum = "^1.18.0"
bitflags = "^2.8.0"
relooper = "^0.1.0"
cityhasher = "^0.1.0"

portal-pc-waffle = "^0.5.4"
px-llvm-codegen-utils-core = "^0.1.4"
px-llvm-codegen-utils-info = "^0.1.4"
portal-pc-asm-common = "^0.1.0"
bitvec = "^1.0.1"
instability = "^0.3.7"
linearize = "^0.1.4"
linearize-derive = "^0.1.0"

swc_atoms = "^7.0.0"
swc_common = "^14.0.0"
swc_ecma_ast = "^15.0.0"
swc_ecma_compat_es2015 = "^26.0.0"
swc_ecma_minifier = "^30.0.0"
swc_ecma_transforms_base = "^25.0.0"
swc_ecma_transforms_optimization = "^26.0.0"
swc_ecma_utils = "^21.0.0"
swc_ecma_visit = "^15.0.0"
swc_bundler = "^29.0.0"
swc_ecma_loader = "^14.0.0"
swc_ecma_parser = "^23.0.0"
swc_ecma_codegen = "^17"



portal-solutions-swibb = {version="^0.4.0",git="https://github.com/portal-co/swibb.git"}
portal-solutions-proxy-signs = "^0.1.0"
