[package]
name = "portal-jsc-swc-cfg"
version = "0.8.0-pre.5"
edition = "2024"
license = "MPL-2.0"
description = "ECMAScript IR"



[dependencies]
anyhow.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
relooper.workspace = true
ssa-impls.workspace = true
ssa-reloop.workspace = true
arena-traits.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
