[package]
name = "portal-jsc-swc-opt-ssa"
version = "0.8.0-pre.6"
edition = "2024"
license = "MPL-2.0"
description = "ECMAScript IR"


[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
id-arena.workspace = true

cfg-traits.workspace = true

ssa-traits.workspace = true
swc-cfg = { version = "^0.8.0-pre.4", path = "../swc-cfg", package = "portal-jsc-swc-cfg" }
swc-tac = { version = "^0.8.0-pre.4", path = "../swc-tac", package = "portal-jsc-swc-tac" }
swc-ssa = { version = "^0.8.0-pre.4", path = "../swc-ssa", package = "portal-jsc-swc-ssa" }
portal-jsc-swc-util = { version = "^0.8.0-pre.4", path = "../swc-util", features = ["ty"] }
# portal-jsc-simpl-js = { version = "0.8.0-pre.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
paste = "1.0.15"
ssa-impls.workspace = true
num-traits = "0.2.19"

[features]
# simpl=["dep:portal-jsc-simpl-js","swc-tac/simpl","swc-ssa/simpl"]
