[package]
name = "portal-jsc-swc-ssa"
version = "0.8.0-pre.1"
edition = "2024"
license = "MPL-2.0"
description = "ECMAScript IR"


[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
ssa-traits.workspace = true
swc-cfg = { version = "0.8.0-pre.0", path = "../swc-cfg", package = "portal-jsc-swc-cfg" }
swc-tac = { version = "0.8.0-pre.0", path = "../swc-tac", package = "portal-jsc-swc-tac" }
portal-jsc-swc-util = { version = "0.8.0-pre.0", path = "../swc-util" }
# portal-jsc-simpl-js = { version = "0.8.0-pre.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
num-traits = "0.2.19"
portal-jsc-common = { version = "0.8.0-pre.0", path = "../portal-jsc-common" }

[features]
# simpl=["dep:portal-jsc-simpl-js","swc-tac/simpl"]
