[package]
name = "portal-jsc-common"
version.workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"
repository.workspace = true
[dependencies]
either = { version = "^1.15.0", default-features = false }
portal-pc-asm-common = "^0.1.0"
bitflags.workspace = true
rkyv.workspace = true

[features]
rkyv-impl = ["rkyv"]
