[package]
name = "portal-jsc-simpl-js"
version.workspace = true
edition = "2024"
license = "MPL-2.0"
description = "ECMAScript IR"

[dependencies]
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true


portal-jsc-swc-util.workspace = true
typenum.workspace = true

