[package]
name = "portal-jsc-swc-cfg"
version .workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"
repository.workspace = true


[dependencies]
anyhow.workspace = true
cfg-traits.workspace = true
swc-ll-common.workspace = true
relooper.workspace = true
ssa-impls.workspace = true
rkyv = {workspace = true,optional = true}
ssa-reloop.workspace = true
arena-traits.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true

[features]
rkyv-impl = ["rkyv", "swc_atoms/rkyv-impl", "swc_common/rkyv-impl", "swc_ecma_ast/rkyv-impl"]
