[package]
name = "portal-jsc-swc-ll-common"
version .workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"


[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
ssa-impls.workspace = true
ssa-reloop.workspace = true
relooper.workspace = true
either = "1.13.0"
id-arena.workspace = true
portal-jsc-swc-util.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-util" }

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
bitflags.workspace = true
portal-jsc-common.workspace = true # = { version = "^0.8.0-pre.6", path = "../portal-jsc-common" }
linearize = { workspace = true, features = ["derive"] }
linearize-derive.workspace = true
portal-solutions-swibb.workspace = true
portal-solutions-proxy-signs.workspace = true

