[package]
name = "portal-jsc-swc-opt-ssa"
version.workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"
repository.workspace = true

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
id-arena.workspace = true
rkyv = {workspace = true,optional = true}

cfg-traits.workspace = true

ssa-traits.workspace = true
swc-cfg.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-cfg", package = "portal-jsc-swc-cfg" }
swc-tac.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-tac", package = "portal-jsc-swc-tac" }
swc-ssa.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-ssa", package = "portal-jsc-swc-ssa" }
portal-jsc-swc-util.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-util", features = ["ty"] }
# portal-jsc-simpl-js = { version = "0.8.0-pre.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
paste = "1.0.15"
ssa-impls.workspace = true
num-traits = "0.2.19"

[features]
rkyv-impl = ["rkyv", "swc_atoms/rkyv-impl", "swc_common/rkyv-impl", "swc_ecma_ast/rkyv-impl", "swc-cfg/rkyv-impl", "swc-tac/rkyv-impl", "swc-ssa/rkyv-impl"]
# simpl=["dep:portal-jsc-simpl-js","swc-tac/simpl","swc-ssa/simpl"]
