[package]
name = "portal-jsc-swc-ssa"
version.workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"


[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
ssa-traits.workspace = true
ssa-impls.workspace = true
swc-cfg.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-cfg", package = "portal-jsc-swc-cfg" }
swc-tac.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-tac", package = "portal-jsc-swc-tac" }
portal-jsc-swc-util.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-util" }
# portal-jsc-simpl-js = { version = "0.8.0-pre.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
num-traits = "0.2.19"
portal-jsc-common.workspace = true # = { version = "^0.8.0-pre.6", path = "../portal-jsc-common" }

[features]
# simpl=["dep:portal-jsc-simpl-js","swc-tac/simpl"]
