[package]
name = "portal-jsc-swc-tac"
version .workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"
repository.workspace = true



[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
ssa-impls.workspace = true
ssa-reloop.workspace = true
rkyv = {workspace = true,optional = true}
relooper.workspace = true
either = "1.13.0"
id-arena.workspace = true
swc-ll-common.workspace = true
swc-cfg.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-cfg", package = "portal-jsc-swc-cfg" }
portal-jsc-swc-util.workspace = true # = { version = "^0.8.0-pre.6", path = "../swc-util" }
portal-jsc-simpl-js = {workspace=true, optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
bitflags.workspace = true
portal-jsc-common.workspace = true # = { version = "^0.8.0-pre.6", path = "../portal-jsc-common" }
linearize = { workspace = true, features = ["derive"] }
linearize-derive.workspace = true
portal-solutions-swibb.workspace = true
portal-solutions-proxy-signs.workspace = true

[features]
rkyv-impl = ["rkyv", "swc_atoms/rkyv-impl", "swc_common/rkyv-impl", "swc_ecma_ast/rkyv-impl", "swc-cfg/rkyv-impl", "swc-ll-common/rkyv-impl"]
simpl-legacy=["dep:portal-jsc-simpl-js"]
