[package]
name = "portal-jsc-swc-util"
version.workspace = true
edition = "2024"

license = "MPL-2.0"
description = "ECMAScript IR"

[dependencies]
bitflags.workspace = true
num-traits = "0.2.19"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
portal-jsc-common.workspace = true
swc_ecma_transforms_optimization.workspace = true
base64 = "0.22.1"
portal-solutions-swibb.workspace = true
swc_ecma_transforms_base.workspace = true

[features]
ty=[]
cli=["swc_common/tty-emitter"]
