[package]
name = "portal-jsc-swc-util"
version.workspace = true
edition.workspace = true     # = "2024"
license.workspace = true     # = "MPL-2.0"
description.workspace = true # = "ECMAScript IR"
repository.workspace = true
[dependencies]
bitflags.workspace = true
num-traits = "0.2.19"
rkyv = {workspace = true,optional = true}
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
portal-jsc-common.workspace = true
swc_ecma_transforms_optimization.workspace = true
base64 = "0.22.1"
portal-solutions-swibb.workspace = true
swc_ecma_transforms_base.workspace = true

[features]
rkyv-impl = ["rkyv", "swc_atoms/rkyv-impl", "swc_common/rkyv-impl", "swc_ecma_ast/rkyv-impl", "portal-jsc-common/rkyv-impl"]
ty=[]
cli=["swc_common/tty-emitter"]
